[project]
name = "deq"
version = "0.1.0"
description = "analysis code for deq"
authors = [
    {name = "Joel Barnes", email = "oelarnes@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
