[project]
name = "deq"
version = "0.1.0"
description = "analysis code for deq"
authors = [
    {name = "Joel Barnes", email = "oelarnes@gmail.com"},
]
dependencies = [
    "jupyterlab>=4.2.5",
    "pandas>=2.2.2",
    "numpy>=2.1.1",
    "requests>=2.32.3",
    "matplotlib>=3.9.2",
    "scikit-learn>=1.5.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
